--- a/index.html
+++ b/index.html
@@ -101,8 +101,6 @@
       padding: 2rem;
     }
   </style>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 <style>
   @media (prefers-color-scheme: dark) {
     body {
@@ -141,12 +139,7 @@
 <body>
   <header>
     <div class="logo">정안해운항공</div>
-    <nav>
-      <a href="#home">홈</a>
-      <a href="#about">회사소개</a>
-      <a href="#services">서비스</a>
-      <a href="#clients">고객사</a>
-      <a href="#contact">문의하기</a>
+    <nav>$1<a href="#contact">문의하기</a><a href="#board">게시판</a>
       <a href="#location">위치</a>
     </nav>
   </header>
@@ -197,17 +190,17 @@
   </section>
 
   <section id="contact">
-    <h2>문의하기</h2>
-    <form action="https://formspree.io/f/xqkrpjvw" method="POST" onsubmit="return showThankYouMessage(event)"
-      <input type="text" name="name" placeholder="이름" required style="padding: 0.8rem; border: 1px solid #ccc; border-radius: 5px;">
-      <input type="email" name="email" placeholder="이메일 주소" required style="padding: 0.8rem; border: 1px solid #ccc; border-radius: 5px;">
-      <textarea name="message" placeholder="문의 내용을 입력해주세요" rows="5" required style="padding: 0.8rem; border: 1px solid #ccc; border-radius: 5px;"></textarea>
-      <button type="submit" style="padding: 0.8rem; background-color: #0070f3; color: white; border: none; border-radius: 5px; cursor: pointer;">메시지 보내기</button>
-    </form>
-    <p style="margin-top: 2rem;">이메일: <a href="mailto:tohyoungjun@icloud.com">tohyoungjun@icloud.com</a></p>
-    <p>전화: <a href="tel:028372311">02-837-2311</a></p>
-    <p>팩스: 02-837-2314</p>
-  <p id="thankYouMessage" style="color: green; font-weight: bold; margin-top: 1rem; display: none;">메시지가 성공적으로 전송되었습니다. 감사합니다!</p>
+  <h2>문의 게시판</h2>
+  <form id="boardForm" onsubmit="return submitToServer(event)" style="display: flex; flex-direction: column; gap: 1rem; max-width: 500px;">
+    <input type="text" name="name" placeholder="이름" required style="padding: 0.8rem; border: 1px solid #ccc; border-radius: 5px;">
+    <textarea name="message" placeholder="문의 내용을 입력해주세요" rows="5" required style="padding: 0.8rem; border: 1px solid #ccc; border-radius: 5px;"></textarea>
+    <button type="submit" style="padding: 0.8rem; background-color: #0070f3; color: white; border: none; border-radius: 5px; cursor: pointer;">게시하기</button>
+  </form>
+  <div id="boardList" style="margin-top: 2rem;"></div>
+</section>
+<section id="board">
+  <h2>문의 게시판</h2>
+  <ul id="storedBoard" style="list-style:none; padding: 0;"></ul>
 </section>
 <section id="realtime">
     <h2>실시간 정보</h2>
@@ -240,10 +233,7 @@
   <footer>
     &copy; 2025 (주)정안해운항공. All rights reserved.
   </footer>
-<script>
-  gsap.from(".hero h1", { y: 50, opacity: 0, duration: 1, ease: "power3.out" });
-  gsap.from(".hero p", { y: 50, opacity: 0, delay: 0.3, duration: 1, ease: "power3.out" });
-</script>
+
 <script>
   // 환율 정보
   fetch('https://api.exchangerate.host/latest?base=USD&symbols=KRW')
@@ -279,6 +269,10 @@ function showThankYouMessage(event) {
     if (response.ok) {
       document.getElementById("thankYouMessage").style.display = "block";
       form.reset();
+  const stored = JSON.parse(localStorage.getItem("boardMessages") || "[]");
+  stored.unshift({ name, message });
+  localStorage.setItem("boardMessages", JSON.stringify(stored));
+  renderBoardMessages();
     } else {
       alert("메시지 전송에 실패했습니다. 다시 시도해주세요.");
     }
@@ -287,6 +281,64 @@ function showThankYouMessage(event) {
   });
   return false;
 }
+</script>
+<script>
+function submitToServer(event) {
+  event.preventDefault();
+  const form = event.target;
+  const name = form.name.value;
+  const message = form.message.value;
+
+  fetch('https://sheetdb.io/api/v1/2cw6tazfufsl5', {
+    method: 'POST',
+    headers: {
+      'Content-Type': 'application/json'
+    },
+    body: JSON.stringify({ data: [{ name, message }] })
+  })
+  .then(response => response.json())
+  .then(() => {
+    alert('게시물이 저장되었습니다.');
+    form.reset();
+    loadMessages();
+  })
+  .catch(() => alert('저장 실패'));
+  return false;
+}
+
+function loadMessages() {
+  fetch('https://sheetdb.io/api/v1/2cw6tazfufsl5')
+    .then(res => res.json())
+    .then(data => {
+      const container = document.getElementById('storedBoard');
+      container.innerHTML = '';
+      data.forEach(entry => {
+        const li = document.createElement("li");
+        li.style.marginBottom = "1rem";
+        li.style.padding = "1rem";
+        li.style.border = "1px solid #ccc";
+        li.style.borderRadius = "6px";
+        li.innerHTML = `<strong>${entry.name}</strong><p>${entry.message}</p>`;
+        container.appendChild(li);
+      });
+    });
+}
+loadMessages();
+function renderBoardMessages() {
+  const stored = JSON.parse(localStorage.getItem("boardMessages") || "[]");
+  const container = document.getElementById("storedBoard");
+  container.innerHTML = "";
+  stored.forEach(entry => {
+    const li = document.createElement("li");
+    li.style.marginBottom = "1rem";
+    li.style.padding = "1rem";
+    li.style.border = "1px solid #ccc";
+    li.style.borderRadius = "6px";
+    li.innerHTML = `<strong>${entry.name}</strong><p>${entry.message}</p>`;
+    container.appendChild(li);
+  });
+}
+renderBoardMessages();
 </script>
 </body>
 </html>
