--- a/index.html
+++ b/index.html
@@ -189,13 +189,16 @@
     </ul>
   </section>
 
-  <section id="contact">
-  <h2>문의 게시판</h2>
-  <form id="boardForm" onsubmit="return submitToServer(event)" style="display: flex; flex-direction: column; gap: 1rem; max-width: 500px;">
-    <input type="text" name="name" placeholder="이름" required style="padding: 0.8rem; border: 1px solid #ccc; border-radius: 5px;">
-    <textarea name="message" placeholder="문의 내용을 입력해주세요" rows="5" required style="padding: 0.8rem; border: 1px solid #ccc; border-radius: 5px;"></textarea>
-    <button type="submit" style="padding: 0.8rem; background-color: #0070f3; color: white; border: none; border-radius: 5px; cursor: pointer;">게시하기</button>
+  <form id="boardForm" onsubmit="return submitToServer(event)" style="margin-top: 2rem;">
+    <input type="text" name="name" placeholder="이름" required style="padding: 0.5rem; width: 100%; max-width: 400px; margin-bottom: 1rem;" />
+    <textarea name="message" placeholder="문의 내용을 입력하세요" required style="padding: 0.5rem; width: 100%; max-width: 400px; height: 120px; margin-bottom: 1rem;"></textarea>
+    <button type="submit" style="padding: 0.7rem 2rem; background: #0070f3; color: white; border: none; border-radius: 4px; cursor: pointer;">문의 등록</button>
   </form>
+  <div style="margin-top: 1rem;">
+    📧 문의 이메일: <a href="mailto:jpkim@jeongansna.com">jpkim@jeongansna.com</a><br>
+    ☎️ 전화번호: 02-837-2311<br>
+    📠 팩스번호: 02-837-2314
+  </div>
   <div id="boardList" style="margin-top: 2rem;"></div>
 </section>
 <section id="board">
