--- a/index.html
+++ b/index.html
@@ -139,9 +139,7 @@
 <body>
   <header>
     <div class="logo">정안해운항공</div>
-    <nav>$1<a href="#contact">문의하기</a><a href="#board">게시판</a>
-      <a href="#location">위치</a>
-    </nav>
+    <nav><a href="#contact">문의하기</a><a href="#location">위치</a></nav>
   </header>
 
   <section class="hero" id="home">
@@ -189,23 +187,16 @@
     </ul>
   </section>
 
-  <form id="boardForm" onsubmit="return submitToServer(event)" style="margin-top: 2rem;">
-    <input type="text" name="name" placeholder="이름" required style="padding: 0.5rem; width: 100%; max-width: 400px; margin-bottom: 1rem;" />
-    <textarea name="message" placeholder="문의 내용을 입력하세요" required style="padding: 0.5rem; width: 100%; max-width: 400px; height: 120px; margin-bottom: 1rem;"></textarea>
-    <button type="submit" style="padding: 0.7rem 2rem; background: #0070f3; color: white; border: none; border-radius: 4px; cursor: pointer;">문의 등록</button>
-  </form>
-  <div style="margin-top: 1rem;">
-    📧 문의 이메일: <a href="mailto:jpkim@jeongansna.com">jpkim@jeongansna.com</a><br>
-    ☎️ 전화번호: 02-837-2311<br>
-    📠 팩스번호: 02-837-2314
-  </div>
-  <div id="boardList" style="margin-top: 2rem;"></div>
-</section>
-<section id="board">
-  <h2>문의 게시판</h2>
-  <ul id="storedBoard" style="list-style:none; padding: 0;"></ul>
-</section>
-<section id="realtime">
+  <section id="contact">
+    <h2>문의하기</h2>
+    <div>
+      📧 문의 이메일: <a href="mailto:jpkim@jeongansna.com">jpkim@jeongansna.com</a><br>
+      ☎️ 전화번호: 02-837-2311<br>
+      📠 팩스번호: 02-837-2314
+    </div>
+  </section>
+
+  <section id="realtime">
     <h2>실시간 정보</h2>
     <div class="grid">
       <div class="service-card">
@@ -257,91 +248,6 @@
   }
   updateTime();
   setInterval(updateTime, 1000);
-</script>
-<script>
-function showThankYouMessage(event) {
-  event.preventDefault();
-  const form = event.target;
-  fetch(form.action, {
-    method: "POST",
-    body: new FormData(form),
-    headers: {
-      'Accept': 'application/json'
-    }
-  }).then(response => {
-    if (response.ok) {
-      document.getElementById("thankYouMessage").style.display = "block";
-      form.reset();
-  const stored = JSON.parse(localStorage.getItem("boardMessages") || "[]");
-  stored.unshift({ name, message });
-  localStorage.setItem("boardMessages", JSON.stringify(stored));
-  renderBoardMessages();
-    } else {
-      alert("메시지 전송에 실패했습니다. 다시 시도해주세요.");
-    }
-  }).catch(error => {
-    alert("네트워크 오류가 발생했습니다.");
-  });
-  return false;
-}
-</script>
-<script>
-function submitToServer(event) {
-  event.preventDefault();
-  const form = event.target;
-  const name = form.name.value;
-  const message = form.message.value;
-
-  fetch('https://sheetdb.io/api/v1/2cw6tazfufsl5', {
-    method: 'POST',
-    headers: {
-      'Content-Type': 'application/json'
-    },
-    body: JSON.stringify({ data: [{ name, message }] })
-  })
-  .then(response => response.json())
-  .then(() => {
-    alert('게시물이 저장되었습니다.');
-    form.reset();
-    loadMessages();
-  })
-  .catch(() => alert('저장 실패'));
-  return false;
-}
-
-function loadMessages() {
-  fetch('https://sheetdb.io/api/v1/2cw6tazfufsl5')
-    .then(res => res.json())
-    .then(data => {
-      const container = document.getElementById('storedBoard');
-      container.innerHTML = '';
-      data.forEach(entry => {
-        const li = document.createElement("li");
-        li.style.marginBottom = "1rem";
-        li.style.padding = "1rem";
-        li.style.border = "1px solid #ccc";
-        li.style.borderRadius = "6px";
-        li.innerHTML = `<strong>${entry.name}</strong><p>${entry.message}</p>`;
-        container.appendChild(li);
-      });
-    });
-}
-loadMessages();
-function renderBoardMessages() {
-  const stored = JSON.parse(localStorage.getItem("boardMessages") || "[]");
-  const container = document.getElementById("storedBoard");
-  container.innerHTML = "";
-  stored.forEach(entry => {
-    const li = document.createElement("li");
-    li.style.marginBottom = "1rem";
-    li.style.padding = "1rem";
-    li.style.border = "1px solid #ccc";
-    li.style.borderRadius = "6px";
-    li.innerHTML = `<strong>${entry.name}</strong><p>${entry.message}</p>`;
-    container.appendChild(li);
-  });
-}
-renderBoardMessages();
 </script>
 </body>
 </html>
