--- a/index.html
+++ b/index.html
@@ -14,58 +14,56 @@
     }
     body {
       font-family: 'Inter', sans-serif;
-      background: #f5f7fa;
+      background: #f4f4f7;
       color: #1e1e1e;
       scroll-behavior: smooth;
     }
     header {
-      background: #fff;
-      box-shadow: 0 1px 4px rgba(0,0,0,0.05);
+      background: white;
       position: sticky;
       top: 0;
-      z-index: 1000;
+      z-index: 999;
       padding: 1rem 2rem;
       display: flex;
       justify-content: space-between;
       align-items: center;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
     }
     .logo {
-      font-size: 1.8rem;
+      font-size: 2rem;
       font-weight: 700;
-      color: #0070f3;
+      color: #007aff;
     }
     nav a {
       margin-left: 1.5rem;
       text-decoration: none;
       color: #333;
       font-weight: 500;
+      transition: color 0.3s;
     }
     nav a:hover {
-      color: #0070f3;
+      color: #007aff;
     }
     .hero {
-      background: url('https://picsum.photos/id/1015/1600/900') center/cover no-repeat;
-      height: 90vh;
+      background: url('https://picsum.photos/id/1016/1600/900') center/cover no-repeat;
+      height: 95vh;
       display: flex;
+      flex-direction: column;
       justify-content: center;
       align-items: center;
-      flex-direction: column;
       color: white;
       text-align: center;
       padding: 2rem;
     }
     .hero h1 {
-      font-size: 3rem;
-      animation: fadeInUp 2s ease-out;
+      font-size: 3.5rem;
+      font-weight: 700;
+      line-height: 1.2;
+      margin-bottom: 1rem;
     }
     .hero p {
-      font-size: 1.2rem;
-      margin-top: 1rem;
-      animation: fadeInUp 2.8s ease-out;
-    }
-    @keyframes fadeInUp {
-      from { opacity: 0; transform: translateY(20px); }
-      to { opacity: 1; transform: translateY(0); }
+      font-size: 1.4rem;
+      opacity: 0.9;
     }
     section {
       max-width: 1100px;
@@ -75,66 +73,57 @@
     section h2 {
       font-size: 2rem;
       margin-bottom: 1.5rem;
-      color: #0070f3;
+      color: #007aff;
     }
     .grid {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
       gap: 2rem;
     }
     .service-card {
       background: #fff;
       padding: 2rem;
-      border-radius: 12px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.05);
+      border-radius: 16px;
+      box-shadow: 0 6px 16px rgba(0,0,0,0.08);
       text-align: center;
+      transition: transform 0.3s ease;
+    }
+    .service-card:hover {
+      transform: translateY(-5px);
     }
     .service-card i {
-      font-size: 2.5rem;
-      color: #0070f3;
+      font-size: 2.8rem;
+      color: #007aff;
       margin-bottom: 1rem;
+    }
+    .clients ul {
+      list-style: none;
+      padding-left: 0;
+      font-size: 1.1rem;
+    }
+    .contact-info {
+      font-size: 1rem;
+      line-height: 1.8;
     }
     footer {
       background: #202124;
       color: #ccc;
       text-align: center;
       padding: 2rem;
+      font-size: 0.9rem;
+    }
+    @media screen and (max-width: 768px) {
+      nav {
+        display: none;
+      }
+      .hero h1 {
+        font-size: 2rem;
+      }
+      .hero p {
+        font-size: 1rem;
+      }
     }
   </style>
-<style>
-  @media (prefers-color-scheme: dark) {
-    body {
-      background: #111;
-      color: #eee;
-    }
-    header, .service-card {
-      background: #1c1c1c;
-    }
-    nav a {
-      color: #eee;
-    }
-    nav a:hover {
-      color: #00bcd4;
-    }
-    .hero {
-      background-blend-mode: overlay;
-    }
-  }
-  @media screen and (max-width: 768px) {
-    nav {
-      display: none;
-    }
-    .logo {
-      font-size: 1.5rem;
-    }
-    .hero h1 {
-      font-size: 2rem;
-    }
-    .hero p {
-      font-size: 1rem;
-    }
-  }
-</style>
 </head>
 <body>
   <header>
@@ -178,7 +167,7 @@
     </div>
   </section>
 
-  <section id="clients">
+  <section id="clients" class="clients">
     <h2>고객사</h2>
     <ul>
       <li>CJ대한통운</li>
@@ -189,32 +178,10 @@
 
   <section id="contact">
     <h2>문의하기</h2>
-    <div>
+    <div class="contact-info">
       📧 문의 이메일: <a href="mailto:jpkim@jeongansna.com">jpkim@jeongansna.com</a><br>
       ☎️ 전화번호: 02-837-2311<br>
       📠 팩스번호: 02-837-2314
-    </div>
-  </section>
-
-  <section id="realtime">
-    <h2>실시간 정보</h2>
-    <div class="grid">
-      <div class="service-card">
-        <i class="fas fa-dollar-sign"></i>
-        <p><strong>USD/KRW 환율:</strong> <span id="exchangeRate">Loading...</span></p>
-      </div>
-      <div class="service-card">
-        <i class="fas fa-clock"></i>
-        <p><strong>뉴욕 시간:</strong> <span id="nyTime">--:--</span></p>
-      </div>
-      <div class="service-card">
-        <i class="fas fa-clock"></i>
-        <p><strong>런던 시간:</strong> <span id="ldnTime">--:--</span></p>
-      </div>
-      <div class="service-card">
-        <i class="fas fa-clock"></i>
-        <p><strong>서울 시간:</strong> <span id="krTime">--:--</span></p>
-      </div>
     </div>
   </section>
 
