--- a/index.html
+++ b/index.html
@@ -4,136 +4,144 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>(주)정안해운항공 | 스마트 물류 포워딩</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
-  <script src="https://kit.fontawesome.com/a2d9a66d65.js" crossorigin="anonymous"></script>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Urbanist:wght@400;600;800&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
   <style>
+    :root {
+      --primary: #1e88e5;
+      --secondary: #f0f4f8;
+      --dark: #212121;
+      --light: #fff;
+      --font: 'Urbanist', sans-serif;
+    }
     * {
-      box-sizing: border-box;
       margin: 0;
       padding: 0;
+      box-sizing: border-box;
     }
     body {
-      font-family: 'Inter', sans-serif;
-      background: #f4f4f7;
-      color: #1e1e1e;
-      scroll-behavior: smooth;
+      font-family: var(--font);
+      background: var(--secondary);
+      color: var(--dark);
+      line-height: 1.6;
     }
     header {
-      background: white;
-      position: sticky;
-      top: 0;
-      z-index: 999;
-      padding: 1rem 2rem;
+      background: var(--light);
       display: flex;
       justify-content: space-between;
       align-items: center;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+      padding: 1.2rem 2rem;
+      position: sticky;
+      top: 0;
+      z-index: 1000;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.05);
     }
     .logo {
-      font-size: 2rem;
-      font-weight: 700;
-      color: #007aff;
+      font-weight: 800;
+      font-size: 1.8rem;
+      color: var(--primary);
     }
     nav a {
       margin-left: 1.5rem;
       text-decoration: none;
-      color: #333;
-      font-weight: 500;
-      transition: color 0.3s;
+      color: var(--dark);
+      font-weight: 600;
+      transition: 0.3s;
     }
     nav a:hover {
-      color: #007aff;
+      color: var(--primary);
     }
     .hero {
       background: url('https://picsum.photos/id/1016/1600/900') center/cover no-repeat;
-      height: 95vh;
+      height: 90vh;
       display: flex;
-      flex-direction: column;
       justify-content: center;
       align-items: center;
-      color: white;
       text-align: center;
+      color: white;
       padding: 2rem;
     }
     .hero h1 {
       font-size: 3.5rem;
-      font-weight: 700;
-      line-height: 1.2;
-      margin-bottom: 1rem;
+      font-weight: 800;
     }
     .hero p {
-      font-size: 1.4rem;
-      opacity: 0.9;
+      font-size: 1.3rem;
+      margin-top: 1rem;
     }
     section {
-      max-width: 1100px;
-      margin: 4rem auto;
-      padding: 0 1.5rem;
+      padding: 4rem 2rem;
+      max-width: 1200px;
+      margin: auto;
     }
     section h2 {
-      font-size: 2rem;
-      margin-bottom: 1.5rem;
-      color: #007aff;
+      font-size: 2.2rem;
+      margin-bottom: 2rem;
+      color: var(--primary);
+      font-weight: 700;
     }
     .grid {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
       gap: 2rem;
     }
-    .service-card {
-      background: #fff;
-      padding: 2rem;
+    .card {
+      background: white;
       border-radius: 16px;
-      box-shadow: 0 6px 16px rgba(0,0,0,0.08);
+      padding: 2rem;
+      box-shadow: 0 4px 20px rgba(0,0,0,0.05);
       text-align: center;
-      transition: transform 0.3s ease;
+      transition: 0.3s ease;
     }
-    .service-card:hover {
-      transform: translateY(-5px);
+    .card:hover {
+      transform: translateY(-6px);
+      box-shadow: 0 10px 30px rgba(0,0,0,0.1);
     }
-    .service-card i {
-      font-size: 2.8rem;
-      color: #007aff;
+    .card i {
+      font-size: 2.5rem;
+      color: var(--primary);
       margin-bottom: 1rem;
     }
-    .clients ul {
+    ul.clients {
       list-style: none;
       padding-left: 0;
       font-size: 1.1rem;
+    }
+    ul.clients li::before {
+      content: "\2022 ";
+      color: var(--primary);
+      font-weight: bold;
+      margin-right: 0.5rem;
     }
     .contact-info {
       font-size: 1rem;
       line-height: 1.8;
     }
+    iframe {
+      border-radius: 12px;
+      margin-top: 1rem;
+    }
     footer {
-      background: #202124;
-      color: #ccc;
+      background: #121212;
+      color: #aaa;
       text-align: center;
       padding: 2rem;
-      font-size: 0.9rem;
-    }
-    @media screen and (max-width: 768px) {
-      nav {
-        display: none;
-      }
-      .hero h1 {
-        font-size: 2rem;
-      }
-      .hero p {
-        font-size: 1rem;
-      }
     }
   </style>
 </head>
 <body>
   <header>
     <div class="logo">정안해운항공</div>
-    <nav><a href="#contact">문의하기</a><a href="#location">위치</a></nav>
+    <nav><a href="#about">회사소개</a><a href="#services">서비스</a><a href="#clients">고객사</a><a href="#contact">문의</a><a href="#location">위치</a></nav>
   </header>
 
   <section class="hero" id="home">
-    <h1>스마트 글로벌 물류 파트너</h1>
-    <p>해운·항공 운송의 미래를 연결합니다</p>
+    <div>
+      <h1>스마트 글로벌 물류 파트너</h1>
+      <p>해운·항공 운송의 미래를 연결합니다</p>
+    </div>
   </section>
 
   <section id="about">
@@ -144,32 +152,32 @@
   <section id="services">
     <h2>서비스</h2>
     <div class="grid">
-      <div class="service-card">
-        <i class="fas fa-ship"></i>
+      <div class="card">
+        <i class="bi bi-truck"></i>
         <p>국제 해상운송 (FCL / LCL)</p>
       </div>
-      <div class="service-card">
-        <i class="fas fa-plane"></i>
+      <div class="card">
+        <i class="bi bi-airplane"></i>
         <p>국제 항공운송</p>
       </div>
-      <div class="service-card">
-        <i class="fas fa-warehouse"></i>
+      <div class="card">
+        <i class="bi bi-building"></i>
         <p>창고 운영 및 보관</p>
       </div>
-      <div class="service-card">
-        <i class="fas fa-truck-loading"></i>
+      <div class="card">
+        <i class="bi bi-box"></i>
         <p>수출입 통관 서비스</p>
       </div>
-      <div class="service-card">
-        <i class="fas fa-globe"></i>
+      <div class="card">
+        <i class="bi bi-diagram-3"></i>
         <p>SCM / 3PL 물류 솔루션</p>
       </div>
     </div>
   </section>
 
-  <section id="clients" class="clients">
+  <section id="clients">
     <h2>고객사</h2>
-    <ul>
+    <ul class="clients">
       <li>CJ대한통운</li>
       <li>삼해상사</li>
       <li>다수의 수출입 제조기업</li>
@@ -179,7 +187,7 @@
   <section id="contact">
     <h2>문의하기</h2>
     <div class="contact-info">
-      📧 문의 이메일: <a href="mailto:jpkim@jeongansna.com">jpkim@jeongansna.com</a><br>
+      📧 이메일: <a href="mailto:jpkim@jeongansna.com">jpkim@jeongansna.com</a><br>
       ☎️ 전화번호: 02-837-2311<br>
       📠 팩스번호: 02-837-2314
     </div>
@@ -188,33 +196,12 @@
   <section id="location">
     <h2>위치</h2>
     <p>서울 금천구 가산디지털2로 14, 213호</p>
-    <iframe src="https://map.naver.com/p/search/서울%20금천구%20가산디지털2로%2014%20213호" width="100%" height="400" style="border:0; margin-top: 1rem;" allowfullscreen loading="lazy"></iframe>
+    <iframe src="https://map.naver.com/p/search/서울%20금천구%20가산디지털2로%2014%20213호" width="100%" height="400" allowfullscreen loading="lazy"></iframe>
   </section>
 
   <footer>
     &copy; 2025 (주)정안해운항공. All rights reserved.
   </footer>
-
-<script>
-  // 환율 정보
-  fetch('https://api.exchangerate.host/latest?base=USD&symbols=KRW')
-    .then(response => response.json())
-    .then(data => {
-      const rate = data.rates.KRW;
-      document.getElementById("exchangeRate").textContent = rate.toFixed(2) + ' KRW';
-    }).catch(() => {
-      document.getElementById("exchangeRate").textContent = '정보를 불러올 수 없습니다';
-    });
-
-  // 세계 시간 업데이트
-  function updateTime() {
-    const now = new Date();
-    document.getElementById('nyTime').textContent = new Date(now.toLocaleString("en-US", { timeZone: "America/New_York" })).toLocaleTimeString();
-    document.getElementById('ldnTime').textContent = new Date(now.toLocaleString("en-GB", { timeZone: "Europe/London" })).toLocaleTimeString();
-    document.getElementById('krTime').textContent = new Date(now.toLocaleString("ko-KR", { timeZone: "Asia/Seoul" })).toLocaleTimeString();
-  }
-  updateTime();
-  setInterval(updateTime, 1000);
-</script>
 </body>
 </html>
+
